--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "test",
     "start": "babel-node index.js",
-    "nodemon": "nodemon --exec npm run start"
+    "nodemon": "nodemon --exec npm run start",
+    "lint": "eslint index.js"
   },
   "repository": {
     "type": "git",
