--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test",
     "start": "babel-node index.js",
     "nodemon": "nodemon --exec npm run start",
-    "lint": "eslint index.js"
+    "lint": "eslint index.js src"
   },
   "repository": {
     "type": "git",
