--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Blockchain created with JS based in Bitcoin",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "jest",
     "start": "babel-node index.js",
     "nodemon": "nodemon --exec npm run start",
-    "lint": "eslint index.js src"
+    "lint": "eslint index.js src",
+    "test:watch": "jest --watchAll"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,16 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
+    "jest": "^27.2.0",
     "nodemon": "^2.0.12"
+  },
+  "dependencies": {
+    "@types/jest": "^27.0.1",
+    "crypto-js": "^4.1.1"
+  },
+  "jest": {
+    "silent": true,
+    "verbose": true,
+    "testEnvironment": "node"
   }
 }
