--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Blockchain created with JS based in Bitcoin",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "start": "babel-node index.js",
+    "start": "babel-node ./src/services/index.js",
     "nodemon": "nodemon --exec npm run start",
     "lint": "eslint index.js src",
+    "test": "jest",
     "test:watch": "jest --watchAll"
   },
   "repository": {
@@ -38,7 +38,8 @@
   },
   "dependencies": {
     "@types/jest": "^27.0.1",
-    "crypto-js": "^4.1.1"
+    "crypto-js": "^4.1.1",
+    "express": "^4.17.1"
   },
   "jest": {
     "silent": true,
