--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node ./src/services/index.js",
+    "start:2": "HTTP_PORT=3001 P2P_PORT=5001 PEERS=ws:localhost:5000 babel-node ./src/services/index.js",
     "nodemon": "nodemon --exec npm run start",
     "lint": "eslint index.js src",
     "test": "jest",
@@ -39,7 +40,8 @@
   "dependencies": {
     "@types/jest": "^27.0.1",
     "crypto-js": "^4.1.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ws": "^8.2.2"
   },
   "jest": {
     "silent": true,
