--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "@types/jest": "^27.0.1",
     "crypto-js": "^4.1.1",
     "express": "^4.17.1",
-    "ws": "^8.2.2"
+    "ws": "^8.2.2",
+    "elliptic": "^6.5.4",
+    "uuid": "^8.3.2"
   },
   "jest": {
     "silent": true,
